--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "drd-backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mashargujjar5/DRD-Backend.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/mashargujjar5/DRD-Backend/issues"
-  },
-  "homepage": "https://github.com/mashargujjar5/DRD-Backend#readme",
-  "dependencies": {
-    "cors": "^2.8.6",
-    "dotenv": "^17.2.4",
-    "express": "^5.2.1",
-    "mongoose": "^9.1.6",
-    "morgan": "^1.10.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.11"
-  }
+    "name": "drd-backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "src/server.js",
+    "scripts": {
+        "start": "node src/server.js",
+        "dev": "nodemon src/server.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/mashargujjar5/DRD-Backend.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "type": "commonjs",
+    "bugs": {
+        "url": "https://github.com/mashargujjar5/DRD-Backend/issues"
+    },
+    "homepage": "https://github.com/mashargujjar5/DRD-Backend#readme",
+    "dependencies": {
+        "cors": "^2.8.6",
+        "dotenv": "^17.2.4",
+        "express": "^5.2.1",
+        "mongoose": "^9.1.6",
+        "morgan": "^1.10.1"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.11"
+    }
 }
