--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     },
     "homepage": "https://github.com/mashargujjar5/DRD-Backend#readme",
     "dependencies": {
+        "bcryptjs": "^3.0.3",
         "cors": "^2.8.6",
         "dotenv": "^17.2.4",
         "express": "^5.2.1",
+        "jsonwebtoken": "^9.0.3",
         "mongoose": "^9.1.6",
         "morgan": "^1.10.1"
     },
